# backend

./: Cargo.toml  README.md  diesel.toml
migrations/2024-08-08-091612_create_todoitems/: up.sql
src/: config.rs  main.rs  schema.rs
src/app/: mod.rs  todo.rs
src/db/: connection.rs  mod.rs
src/errors/: app_error.rs
src/models/: mod.rs  todo.rs
src/routes/: mod.rs  todos.rs
src/services/: todo_service.rs
test/: test_apis.http
